it seems to be working now

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,4 +1,4 @@
-FROM elixir:1.17-alpine AS builder
+FROM elixir:1.19-alpine AS builder
 
 WORKDIR /app
 
@@ -7,7 +7,7 @@ RUN apk add --no-cache git
 RUN mix local.hex --force && mix local.rebar --force
 
 COPY mix.exs mix.lock ./
-COPY config/config.exs config/runtime.exs config/prod.exs config/
+COPY config/config.exs config/runtime.exs config/
 
 ENV MIX_ENV=prod
 RUN mix deps.get --only prod && mix deps.compile
@@ -16,9 +16,9 @@ COPY lib lib
 
 RUN mix release
 
-FROM alpine:3.19
+FROM elixir:1.19-alpine
 
-RUN apk add --no-cache libstdc++ ncurses-libs docker-cli
+RUN apk add --no-cache docker-cli
 
 WORKDIR /app
 COPY --from=builder /app/_build/prod/rel/elixir_minecraft_bot ./
